group 'com.wialon'
version = '1.3.57'

apply plugin: 'java'
apply plugin: 'maven-publish'

archivesBaseName = 'wialon-sdk'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

sourceSets {
    main {
        java {
            srcDir 'src'
        }
        resources {
            srcDir 'resources'
        }
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url 'https://plugins.gradle.org/m2/' }
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
    gradleVersion = '7.4.1'
}


dependencies {
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
    implementation group: 'org.apache.httpcomponents', name: 'httpclient-cache', version: '4.5.13'
    implementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.13'
    implementation group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
}